--- a/static/css/den.css
+++ b/static/css/den.css
@@ -24,7 +24,7 @@
 }
 @media (min-width: 1200px) {
   .container {
-    width: 850px;
+    width: 1200px;
   }
 }
 @media (min-width: 768px) {
@@ -52,6 +52,7 @@
     text-align: right;
   }
 }
+
 @media (max-width: 767px) {
   .header-nav .nav-menu {
     line-height: 2em;
@@ -274,7 +275,9 @@ h4:after {
 .header-container {
   background: #f5f5f5;
   padding: 0;
-  min-height: 360px;
+  /* min-height: 360px; */
+  min-height: 160px;
+
 }
 .header-wrapper{
   padding-left: 40px;
@@ -306,7 +309,7 @@ h4:after {
   margin-top: 10px;
   margin-bottom: 15px;
   width: 50px;
-  border-bottom: 3px solid #eb2344;
+  /* border-bottom: 3px solid #eb2344; */
 }
 .header-subtitle {
   font-size: 14px;
