--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -29,14 +29,7 @@
         </ul>
       </div>
       <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
-        {{ if .Site.Menus.social }}
-        <div class="footer-title">{{ i18n "social" }}</div>
-        <ul class="list-unstyled">
-          {{ range .Site.Menus.social }}
-          <li><a href="{{ .URL | safeURL }}" rel="noopener" target="_blank">{{ .Name }}</a></li>
-          {{ end }}
-        </ul>
-        {{ end }}
+        {{ partial "footsie" . }}
       </div>
       <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
         {{ if .Site.Menus.links }}
