--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -28,10 +28,10 @@
             {{ end }}
         </ul>
       </div>
-      <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
+      <div class="col-xs-4 col-sm-6 col-md-6 col-lg-6">
         {{ partial "footsie" . }}
       </div>
-      <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
+      <!-- <div class="col-xs-4 col-sm-3 col-md-3 col-lg-3">
         {{ if .Site.Menus.links }}
         <div class="footer-title">{{ i18n "links" }}</div>
         <ul class="list-unstyled">
@@ -40,7 +40,7 @@
           {{ end }}
         </ul>
         {{ end }}
-      </div> 
+      </div>  -->
       <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
         <p class="pull-right text-right">
           <small><em>Proudly powered by <a href="https://gohugo.io/" rel="noopener" target="_blank">Hugo</a></em></small><br/>
