--- a/static/css/den.css
+++ b/static/css/den.css
@@ -29,8 +29,10 @@
 }
 @media (min-width: 768px) {
   .header-nav {
-    height:100px;
-    line-height:100px;
+    height:auto;
+    /* line-height:100px; */
+    padding-top: 100px;
+    
     display: block !important;
   }
   .header-nav .nav-menu {
@@ -268,6 +270,14 @@ h4:after {
 }
 .header-nav .nav-menu .fas {
   padding-right: 8px;
+}
+
+.header-nav li .dropdown-item {
+  font-size: 12px;
+}
+.header-nav ul .dropdown .show {
+  background-color: transparent;
+  border: 0px;
 }
 
 /* Header */
